# desci

./: .gitignore  Justfile  README.md  flake.nix  garnix.yaml  pyproject.toml
my_project/: __init__.py
nix/dream2nix/: my-project.nix
nix/flake-parts/: devshell.nix  packages.nix
nix/std/: flake.nix
nix/std/cells/repo/: pops.nix
nix/std/cells/repo/jupyenv/: example.nix
nix/std/cells/repo/shells/: default.nix
