[project]
name = "desci"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "guangtao", email = "gtrunsec@hardenedlinux.org" }]
dependencies = ["jupyterlab>=4.3.6"]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
